--- a/src/app/components/user/user-add.component.html
+++ b/src/app/components/user/user-add.component.html
@@ -68,54 +68,59 @@
               
                 </div>
                 <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table">
-                            <thead class=" text-primary">
-                                <th>
-                                    User Name
-                                </th>
-                                <th>
-                                    Email
-                                </th>
-                                <th>
-                                    Disabled
-                              </th>
-                                <th>
-                                    Delete
-                                </th>
-                                <th>
-                                   Enable
-                              </th>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let item of results">
-                                    <td>
-                                        {{item.userName}}
-                                    </td>
-                                    <td>
-                                        {{item.email}}
-                                    </td>
-                                    <td>
-                                      {{item.lockoutEnabled}}
-                                    </td>
-                                    <td>
-                                        <button mat-icon-button (click)="DeleteUser(item.id)" [disabled]="item.lockoutEnabled">
-                                            <mat-icon>delete</mat-icon>
-                                      </button>
-                                        <!-- <mat-icon  (click)="DeleteUser(item.id)">delete</mat-icon> -->
-                                        <!-- <button mat-raised-button type="submit"  class="btn btn-info  pull-right  button"  >Delete</button> -->
-                                    </td>
-                                    <td>
-                                      <button mat-icon-button (click)="EnableUser(item.id)" [disabled]="!item.lockoutEnabled">
-                                          <mat-icon>add</mat-icon>
-                                    </button>
-                                      <!-- <mat-icon  (click)="DeleteUser(item.id)">delete</mat-icon> -->
-                                      <!-- <button mat-raised-button type="submit"  class="btn btn-info  pull-right  button"  >Delete</button> -->
-                                  </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                  <div class="mat-elevation-z8">
+                    <table mat-table [dataSource]="dataSource">
+
+                        <!-- Position Column -->
+                        <ng-container matColumnDef="userName">
+                            <th mat-header-cell *matHeaderCellDef> User Name </th>
+                            <td mat-cell *matCellDef="let element">     {{element.user.userName}} </td>
+                        </ng-container>
+
+                        <!-- Name Column -->
+                        <ng-container matColumnDef="email">
+                            <th mat-header-cell *matHeaderCellDef> eMail </th>
+                            <td mat-cell *matCellDef="let element">{{element.user.email}}</td>
+                        </ng-container>
+
+                        <!-- Weight Column -->
+                        <ng-container matColumnDef="branch">
+                            <th mat-header-cell *matHeaderCellDef> Branch </th>
+                            <td mat-cell *matCellDef="let element">    {{element.branch.name}} </td>
+                        </ng-container>
+
+                        <!-- Symbol Column -->
+                        <ng-container matColumnDef="inactive">
+                            <th mat-header-cell *matHeaderCellDef> Inactive </th>
+                            <td mat-cell *matCellDef="let element">  {{element.user.lockoutEnabled}} </td>
+                        </ng-container>
+
+                        <!-- Symbol Column -->
+                        <ng-container matColumnDef="disable">
+                            <th mat-header-cell *matHeaderCellDef> Disable </th>
+                            <td mat-cell *matCellDef="let element">  <button mat-icon-button (click)="DeleteUser(element.user.id)" [disabled]="element.user.lockoutEnabled">
+                              <mat-icon>delete</mat-icon>
+                        </button> </td>
+                        </ng-container>
+                        <!-- Symbol Column -->
+
+                        <ng-container matColumnDef="enable">
+                            <th mat-header-cell *matHeaderCellDef> Enable </th>
+                            <td mat-cell *matCellDef="let element">  <button mat-icon-button (click)="EnableUser(element.user.id)" [disabled]="!element.user.lockoutEnabled">
+                              <mat-icon>add</mat-icon>
+                        </button> </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row (click)="selection(row)" *matRowDef="let row; columns: displayedColumns;">
+                        </tr>
+                    </table>
+
+                    <mat-paginator #paginator [pageSizeOptions]="[5, 10, 20]" [length]="results?.length"
+                        [pageSize]="5" showFirstLastButtons aria-label="Select page of periodic elements">
+                    </mat-paginator>
+                </div>
+                  
                 </div>
             </div>
         </div>
