--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -115,7 +115,7 @@
                                 </tr>
                             </table>
 
-                            <mat-paginator #paginator [pageSizeOptions]="[5, 10, 20]" [length]="results.length"
+                            <mat-paginator #paginator [pageSizeOptions]="[5, 10, 20]" [length]="results?.length"
                                 [pageSize]="5" showFirstLastButtons aria-label="Select page of periodic elements">
                             </mat-paginator>
                         </div>
