--- a/src/app/components/reports/reports.component.html
+++ b/src/app/components/reports/reports.component.html
@@ -1,106 +1,113 @@
 <div class="main-content">
   <div class="container-fluid">
     <div *ngIf="hideSpinner" class="loader"></div>
-      <div class="row"  *ngIf="!hideSpinner">
-          <div class="col-md-12">
-              <div class="card">
-                  <div class="card-header card-header-danger">
-                      <h4 class="card-title">Registration Filters</h4>
-                  </div>
-                  <div class="card-body">
-                      <form [formGroup]="reportsForm">
-                        <div class="row">
-                          <div class="col-md-6">
-                          <mat-form-field class="example-full-width">
-                            <mat-label>Branch </mat-label>
-                          <mat-select required [formControlName]="fields.branch" [id]="fields.branch" >
-                            <mat-option *ngFor="let branch of Branch" [value]="branch.name" (click)="validateBranchSelection(branch)">{{branch.name}}</mat-option>
-                          </mat-select>
-                          </mat-form-field>
-                          <input #enableDateRange id="enableDateRange"  type="checkbox" aria-label="enable filters" [formControlName]="fields.dateRange"  [id]="fields.dateRange"  placeholder="End Date" [checked]="dateRangeChecked"  (change)="dateRangeChange(enableDateRange.checked)"/>
-                          <label style="padding-left: 5px;">Enable date range</label>
-                          </div>
-                        </div>
-                          <div class="row">
-                              <div class="col-md-6">
-                                <mat-form-field class="example-full-width" >
-                                  <input  [formControlName]="fields.startDate"  [id]="fields.startDate"  matInput placeholder="Start Date" type="date" required>
-                                </mat-form-field>
-                              </div>
-                              <div class="col-md-6">
-                                <mat-form-field class="example-full-width" >
-                                  <input [formControlName]="fields.endDate"  [id]="fields.endDate" matInput placeholder="End Date" type="date" required>
-                                </mat-form-field>
-                              </div>
-                          </div>
-                        
-                          <input #filterCheckBox id="filterCheckBox"  type="checkbox" aria-label="enable filters"  placeholder="End Date" [checked]="true"  (change)="filterChange(filterCheckBox.checked)"/>
-                          <label style="padding-left: 5px;">Get all branch registrations</label>
-                          <button mat-raised-button type="submit" (click)="Search()" class="btn btn-info pull-right button"  >Search</button>
-                          <div class="clearfix"></div>
-                      </form>
-                  </div>
-              </div>
+    <div class="row" *ngIf="!hideSpinner">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-header card-header-danger">
+            <h4 class="card-title">Registration Filters</h4>
           </div>
-          <div class="col-md-12">
-            <div class="card">
-                <div class="card-header card-header-danger">
-                    <h4 class="card-title ">Search Results</h4>
-              
+          <div class="card-body">
+            <form [formGroup]="reportsForm">
+              <div class="row">
+                <div class="col-md-6">
+                  <mat-form-field class="example-full-width">
+                    <mat-label>Branch </mat-label>
+                    <mat-select required [formControlName]="fields.branch" [id]="fields.branch">
+                      <mat-option *ngFor="let branch of Branch" [value]="branch.name"
+                        (click)="validateBranchSelection(branch)">{{branch.name}}</mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                  <input #enableDateRange id="enableDateRange" type="checkbox" aria-label="enable filters"
+                    [formControlName]="fields.dateRange" [id]="fields.dateRange" placeholder="End Date"
+                    [checked]="dateRangeChecked" (change)="dateRangeChange(enableDateRange.checked)" />
+                  <label style="padding-left: 5px;">Enable date range</label>
                 </div>
-                <div class="card-body">
-                  <div class="mat-elevation-z8">
-                    <table mat-table [dataSource]="dataSource">
-
-                        <!-- Position Column -->
-                        <ng-container matColumnDef="registrationNo">
-                            <th mat-header-cell *matHeaderCellDef> Registration No. </th>
-                            <td mat-cell *matCellDef="let element"> {{element.registrationNumber}} </td>
-                        </ng-container>
-
-                        <!-- Name Column -->
-                        <ng-container matColumnDef="studentName">
-                            <th mat-header-cell *matHeaderCellDef> Name </th>
-                            <td mat-cell *matCellDef="let element"> {{element.studentName}} </td>
-                        </ng-container>
-
-                        <!-- Weight Column -->
-                        <ng-container matColumnDef="registrationDate">
-                            <th mat-header-cell *matHeaderCellDef> Registration Date </th>
-                            <td mat-cell *matCellDef="let element"> {{element.registrationDate | date:
-                                'dd/MM/yyyy'}} </td>
-                        </ng-container>
-
-                        <!-- Symbol Column -->
-                        <ng-container matColumnDef="registeredBy">
-                            <th mat-header-cell *matHeaderCellDef> Registered By </th>
-                            <td mat-cell *matCellDef="let element"> {{element.createBy.name}} </td>
-                        </ng-container>
-
-                        <!-- Symbol Column -->
-                        <ng-container matColumnDef="courseName">
-                            <th mat-header-cell *matHeaderCellDef> Course Name </th>
-                            <td mat-cell *matCellDef="let element"> {{element.course}} </td>
-                        </ng-container>
-                        <!-- Symbol Column -->
-
-                        <ng-container matColumnDef="branchName">
-                            <th mat-header-cell *matHeaderCellDef> Branch Name </th>
-                            <td mat-cell *matCellDef="let element"> {{element.branch.name}} </td>
-                        </ng-container>
-
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row (click)="selection(row)" *matRowDef="let row; columns: displayedColumns;">
-                        </tr>
-                    </table>
-
-                    <mat-paginator #paginator [pageSizeOptions]="[5, 10, 20]" [length]="results?.length"
-                        [pageSize]="5" showFirstLastButtons aria-label="Select page of periodic elements">
-                    </mat-paginator>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <mat-form-field class="example-full-width">
+                    <input [formControlName]="fields.startDate" [id]="fields.startDate" matInput
+                      placeholder="Start Date" type="date" required>
+                  </mat-form-field>
                 </div>
+                <div class="col-md-6">
+                  <mat-form-field class="example-full-width">
+                    <input [formControlName]="fields.endDate" [id]="fields.endDate" matInput placeholder="End Date"
+                      type="date" required>
+                  </mat-form-field>
                 </div>
-            </div>
+              </div>
+
+              <input #filterCheckBox id="filterCheckBox" type="checkbox" aria-label="enable filters"
+                placeholder="End Date" [checked]="allBaranchChecked" (change)="filterChange(filterCheckBox.checked)" />
+              <label style="padding-left: 5px;">Get all branch registrations</label>
+              <button mat-raised-button type="submit" (click)="Search()"
+                class="btn btn-info pull-right button">Search</button>
+              <div class="clearfix"></div>
+            </form>
+          </div>
         </div>
       </div>
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-header card-header-danger">
+            <h4 class="card-title ">Search Results</h4>
+
+          </div>
+          <div class="card-body">
+            <div class="mat-elevation-z8">
+              <table mat-table [dataSource]="dataSource">
+
+                <!-- Position Column -->
+                <ng-container matColumnDef="registrationNo">
+                  <th mat-header-cell *matHeaderCellDef> Registration No. </th>
+                  <td mat-cell *matCellDef="let element"> {{element.registrationNumber}} </td>
+                </ng-container>
+
+                <!-- Name Column -->
+                <ng-container matColumnDef="studentName">
+                  <th mat-header-cell *matHeaderCellDef> Name </th>
+                  <td mat-cell *matCellDef="let element"> {{element.studentName}} </td>
+                </ng-container>
+
+                <!-- Weight Column -->
+                <ng-container matColumnDef="registrationDate">
+                  <th mat-header-cell *matHeaderCellDef> Registration Date </th>
+                  <td mat-cell *matCellDef="let element"> {{element.registrationDate | date:
+                    'dd/MM/yyyy'}} </td>
+                </ng-container>
+
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="registeredBy">
+                  <th mat-header-cell *matHeaderCellDef> Registered By </th>
+                  <td mat-cell *matCellDef="let element"> {{element.createBy.name}} </td>
+                </ng-container>
+
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="courseName">
+                  <th mat-header-cell *matHeaderCellDef> Course Name </th>
+                  <td mat-cell *matCellDef="let element"> {{element.course}} </td>
+                </ng-container>
+                <!-- Symbol Column -->
+
+                <ng-container matColumnDef="branchName">
+                  <th mat-header-cell *matHeaderCellDef> Branch Name </th>
+                  <td mat-cell *matCellDef="let element"> {{element.branch.name}} </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row (click)="selection(row)" *matRowDef="let row; columns: displayedColumns;">
+                </tr>
+              </table>
+
+              <mat-paginator #paginator [pageSizeOptions]="[5, 10, 20]" [length]="results?.length" [pageSize]="5"
+                showFirstLastButtons aria-label="Select page of periodic elements">
+              </mat-paginator>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
