--- a/src/app/registration-find/registration-view.component.html
+++ b/src/app/registration-find/registration-view.component.html
@@ -91,6 +91,14 @@
                                 </strong>
                             </div>
                         </div>
+                        <div class="row">
+                            <div style="display: inline-flex;"class="col-md-6" >
+                                <p> Reciept Reference: </p> &nbsp;
+                                <strong>
+                                    <p>{{result.registration.recieptReference}}</p>
+                                </strong>
+                            </div>
+                        </div>
                         <div class="row" style="margin-top: 3rem;">
                             <div class="col-md-6" >
                                 <strong *ngIf="idDocument">
