--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -31,7 +31,7 @@
                               </div>
                               <div class="col-md-6">
                                   <mat-form-field class="example-full-width" >
-                                    <input [formControlName]="fields.email"  [id]="fields.email" matInput placeholder="Email address" type="email" required>
+                                    <input [formControlName]="fields.email"  [id]="fields.email" matInput placeholder="Email address" type="email" >
                                   </mat-form-field>
                               </div>
                           </div>
@@ -88,6 +88,11 @@
                               <div class="col-md-6">
                                 <mat-form-field class="example-full-width">
                                   <input  [formControlName]="fields.postalCode" [id]="fields.postalCode" matInput placeholder="Postal Code" type="text">
+                                </mat-form-field>
+                              </div>
+                              <div class="col-md-6">
+                                <mat-form-field class="example-full-width">
+                                  <input  [formControlName]="fields.recieptReference" [id]="fields.recieptReference" matInput placeholder="Reciept Reference" type="text">
                                 </mat-form-field>
                               </div>
                           </div>
