--- a/src/app/components/reports/reports.component.html
+++ b/src/app/components/reports/reports.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
   <div class="container-fluid">
-    <div *ngIf="hideSpinner" class="loader"></div>
-    <div class="row" *ngIf="!hideSpinner">
+    <div [hidden]="!hideSpinner" class="loader"></div>
+    <div class="row" [hidden]="hideSpinner">
       <div class="col-md-12">
         <div class="card">
           <div class="card-header card-header-danger">
@@ -39,6 +39,7 @@
                 </div>
               </div>
 
+
               <input #filterCheckBox id="filterCheckBox" type="checkbox" aria-label="enable filters"
                 placeholder="End Date" [checked]="allBaranchChecked" (change)="filterChange(filterCheckBox.checked)" />
               <label style="padding-left: 5px;">Get all branch registrations</label>
@@ -52,59 +53,110 @@
       <div class="col-md-12">
         <div class="card">
           <div class="card-header card-header-danger">
+            <h4 class="card-title">Search by ID Number :</h4>
+          </div>
+          <div class="card-body">
+            <form [formGroup]="reportsForm">
+              <div class="row">
+
+                  <div class="col-md-6">
+                    <mat-form-field class="example-full-width">
+                      <input [formControlName]="fields.idNumber" [id]="fields.idNumber" matInput placeholder="Id Number"
+                        type="text" required>
+                    </mat-form-field>
+                  </div>
+                  <div class="col-md-6">
+                    <button mat-raised-button type="submit" (click)="getAllRegistrationIdNumber()"
+                    class="btn btn-info pull-right button">Search</button>
+                  </div>
+          
+              </div>
+
+            
+
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-header card-header-danger">
             <h4 class="card-title ">Search Results</h4>
 
           </div>
           <div class="card-body">
-            <div class="mat-elevation-z8">
-              <table mat-table [dataSource]="dataSource">
+
+            <div class="example-header">
+              <mat-form-field>
+                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter by ID number">
+              </mat-form-field>
+            </div>
+
+            <div class="example-container mat-elevation-z8">
+
+              <mat-table  [dataSource]="dataSource" matSort>
 
                 <!-- Position Column -->
                 <ng-container matColumnDef="registrationNo">
-                  <th mat-header-cell *matHeaderCellDef> Registration No. </th>
-                  <td mat-cell *matCellDef="let element"> {{element.registrationNumber}} </td>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Registration No. </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.registrationNumber}} </mat-cell>
                 </ng-container>
 
                 <!-- Name Column -->
                 <ng-container matColumnDef="studentName">
-                  <th mat-header-cell *matHeaderCellDef> Name </th>
-                  <td mat-cell *matCellDef="let element"> {{element.studentName}} </td>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.student?.name}} </mat-cell>
                 </ng-container>
 
                 <!-- Weight Column -->
                 <ng-container matColumnDef="registrationDate">
-                  <th mat-header-cell *matHeaderCellDef> Registration Date </th>
-                  <td mat-cell *matCellDef="let element"> {{element.registrationDate | date:
-                    'dd/MM/yyyy'}} </td>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Registration Date </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.registrationDate | date:
+                    'dd/MM/yyyy'}} </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="createdDate">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Created Date</mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.createdDate | date:
+                    'dd/MM/yyyy'}} </mat-cell>
                 </ng-container>
 
                 <!-- Symbol Column -->
                 <ng-container matColumnDef="registeredBy">
-                  <th mat-header-cell *matHeaderCellDef> Registered By </th>
-                  <td mat-cell *matCellDef="let element"> {{element.createBy.name}} </td>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Registered By </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.createBy?.name}} </mat-cell>
                 </ng-container>
 
                 <!-- Symbol Column -->
                 <ng-container matColumnDef="courseName">
-                  <th mat-header-cell *matHeaderCellDef> Course Name </th>
-                  <td mat-cell *matCellDef="let element"> {{element.course}} </td>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Course Name </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.courseDetails?.name}} </mat-cell>
                 </ng-container>
                 <!-- Symbol Column -->
 
                 <ng-container matColumnDef="branchName">
-                  <th mat-header-cell *matHeaderCellDef> Branch Name </th>
-                  <td mat-cell *matCellDef="let element"> {{element.branch.name}} </td>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Branch Name </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.branch?.name}} </mat-cell>
                 </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row (click)="selection(row)" *matRowDef="let row; columns: displayedColumns;">
-                </tr>
-              </table>
+                <ng-container matColumnDef="idNumber">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Id Number </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.student?.idNumber}} </mat-cell>
+                </ng-container>
 
-              <mat-paginator #paginator [pageSizeOptions]="[5, 10, 20]" [length]="results?.length" [pageSize]="5"
-                showFirstLastButtons aria-label="Select page of periodic elements">
-              </mat-paginator>
+
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-row (click)="selection(row)" *matRowDef="let row; columns: displayedColumns;">
+                </mat-row>
+              </mat-table>
+
+              <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+              <label class="hint">click record to view</label>
             </div>
+           
+
+
+
           </div>
         </div>
       </div>
