--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -97,10 +97,20 @@
                               </div>
                           </div>
                           <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-md-6">
+                     
                               <input type="file" [formControlName]="fields.idDocument" [id]="fields.idDocument" #fileInput placeholder="Upload ID Document"  (change)="onFileSelect($event)" [(ngModel)]="documentFile"/>
+                         
+                            </div>
+                            <div class="col-md-6">
+                              <mat-form-field class="example-full-width">
+                                <input [formControlName]="fields.registrationDate" [id]="fields.registrationDate" matInput placeholder="Registration Date"
+                                  type="date" required>
+                              </mat-form-field>
+                              <!-- <input [formControlName]="fields.registrationDate" [id]="fields.registrationDate" placeholder="Registration Date"  type="date"/> -->
                             </div>
                         </div>
+                  
                           <button mat-raised-button type="submit" class="btn btn-info pull-right button"  (click)="createRegistration()">Submit</button>
                       
                       </form>
